@startuml
'https://plantuml.com/class-diagram

'abstract class AbstractList
'abstract AbstractCollection
'interface List
'interface Collection
'
'List <|-- AbstractList
'Collection <|-- AbstractCollection
'
'Collection <|- List
'AbstractCollection <|- AbstractList
'AbstractList <|-- ArrayList
'
'class ArrayList {
'Object[] elementData
'size()
'}
'
'enum TimeUnit {
'DAYS
'HOURS
'MINUTES
'}
class Miembro {
    nombre: string
}

class Tarea{
    -nombre: string
    -fechaInicio: DateTime
    -fechaFin: DateTime
    -prioridad: number
    -estado: string
}
class Proyecto{
    -nombreProyecto: String
}

Proyecto o-- "*" Tarea
Miembro "1" o-- "*" Tarea

@enduml